--- a/Waiter/views/admin/property.twig
+++ b/Waiter/views/admin/property.twig
@@ -139,6 +139,30 @@
                                             {{ (loop.last)?'':'required' }}
                                            value="{{ property.destination3 }}"/>
                                 </div>
+                                <div class="field">
+                                    <label for="latitude-{{ property.id }}">
+                                        Latitude <span class="required">*</span>
+                                    </label>
+                                    <input type="number" step="any" min="0"
+                                           data-id="{{ property.id }}"
+                                           class="persist handleChange"
+                                           name="Property[{{ property.id }}].latitude"
+                                           id="latitude-{{ property.id }}"
+                                            {{ (loop.last)?'':'required' }}
+                                           value="{{ property.latitude }}"/>
+                                </div>
+                                <div class="field">
+                                    <label for="longitude-{{ property.id }}">
+                                        Longitude <span class="required">*</span>
+                                    </label>
+                                    <input type="number" step="any" min="0"
+                                           data-id="{{ property.id }}"
+                                           class="persist handleChange"
+                                           name="Property[{{ property.id }}].longitude"
+                                           id="longitude-{{ property.id }}"
+                                            {{ (loop.last)?'':'required' }}
+                                           value="{{ property.longitude }}"/>
+                                </div>
                                 <input type="submit" class="unload" value="done" onClick="if (document.getElementById('title-{{ property.id }}').validity.valid) window.location.reload()">
                             </div>
                             <div id="examples-{{ property.id }}" class="col-sm-6">
