--- a/Waiter/views/admin/property.twig
+++ b/Waiter/views/admin/property.twig
@@ -153,7 +153,7 @@
                                     <label for="latitude-{{ property.id }}">
                                         Latitude <span class="required">*</span>
                                     </label>
-                                    <input type="number" step="any" min="0"
+                                    <input type="number" step="any"
                                            data-id="{{ property.id }}"
                                            class="persist handleChange"
                                            name="Property[{{ property.id }}].latitude"
@@ -165,7 +165,7 @@
                                     <label for="longitude-{{ property.id }}">
                                         Longitude <span class="required">*</span>
                                     </label>
-                                    <input type="number" step="any" min="0"
+                                    <input type="number" step="any"
                                            data-id="{{ property.id }}"
                                            class="persist handleChange"
                                            name="Property[{{ property.id }}].longitude"
