--- a/Waiter/views/admin/property.twig
+++ b/Waiter/views/admin/property.twig
@@ -178,7 +178,7 @@
                             <div class="col-sm-6 col-xs-12">
                                 <p>
                                     To find the Latitiude and Longitude for your property, go to <a href="https://maps.google.com" target="_blank">Google maps</a>
-                                    and locate your property. Right-click on it (or 2-fingers on a Mac) and the latitude and longitude are shown.
+                                    and locate your property. Click on it and the latitude and longitude are shown in a pop-up box.
                                 </p>
                             </div>
                         </div>
