--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -56,8 +56,55 @@
         }
         jQuery('.soup-icon').click(doAllServiceChecks);
         doAllServiceChecks();
+
+        window.soup_progress = function(){
+            var ajaxCall = {
+                type: "get",
+                url: ajaxurl,
+                data: {
+                    'action': 'soup_resynch_progress',
+                    _vs_nonce: jQuery('INPUT[name="_vs_nonce"]').val()
+                }
+            };
+            jQuery.ajax(ajaxCall)
+                .done(function($response){
+                    if ($response.progress) {
+                        var $=jQuery('BUTTON.resynch');
+                        if ('Re-Synch'===$.html()) {
+                            return;
+                        } else {
+                            $.html(''+$response.progress+'%');
+                        }
+                    }
+                    setTimeout(soup_progress,1000);
+                });
+        }
+
+        jQuery('BUTTON.resynch').click(function (){
+            this.disabled=true;
+            jQuery('BUTTON.resynch').html('0%');
+            var ajaxCall = {
+                type: "post",
+                context: this,
+                url: ajaxurl,
+                data: {
+                    'action': 'soup_resynch',
+                    _vs_nonce: jQuery('INPUT[name="_vs_nonce"]').val()
+                }
+            };
+            jQuery.ajax(ajaxCall)
+                .fail(function(jqXHR,status,error) {
+                    console.log('fail (vacation-soup) '+status+' '+error);
+                })
+                .always(function(response) {
+                    this.disabled=false;
+                    jQuery('BUTTON.resynch').html('Re-Synch');
+                });
+            setTimeout(soup_progress,0);
+            return false;
+        });
     });
-</script>
+    </script>
 
 <div class="vs-content tab-connect row">
     <div class="col-lg-6 col-md-6 col-xs-12 center-xs">
@@ -79,7 +126,6 @@
                     data-persist-action="doAllServiceChecks()"/>
                 </div>
                 <div class="label-indent">
-                    <input type="submit" value="done" class="unload" onClick="if (!document.getElementById('kitchen_password').disabled) window.location.reload()">
                 </div>
                 <p>You should not change these values unless advised to do so by a member of the Vacation Soup team.</p>
                 <div class="field">
@@ -87,6 +133,7 @@
                         Kitchen
                     </label>
                     <input type="text" class="persist" name="SoupWaiter.kitchen_host" id="kitchen_host" value="{{ soup.kitchen_host }}"/>
+                    <button class="resynch">Re-Synch</button>
                 </div>
                 <div class="field">
                     <label for="kitchen_auth_api">
