--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -505,3 +505,15 @@ SPAN.required{
 INPUT.required {
     border: 1px solid red;
 }
+BUTTON.resynch {
+    border-radius: 5px;
+    height: 20px;
+    width: 80px;
+    display: inline-block;
+    background: rgba(0,0,0,0.1);
+    color: rgba(0,0,0,0.9);
+}
+BUTTON.resynch:disabled {
+    background: rgba(0,0,0,1); /* url(../img/loading.svg) center no-repeat; */
+    color: rgba(255,255,255,1);
+}
