* **Enhancements**:   - Improved automatic tags   - Automatically set Geo of all posts to first properties location   - Only posts with a featured image get syndicated   - Historic posts automatically syndicated   - Improved connect->service checks
* **Bug Fixes**:
  - Manually created posts now syndicate properly
  - Vacation Soup posts saved as draft for review now syndicate
  - Stopped suplicate posts appearing in the soup
  - Stopped featured image being dropped when editing a post
  - Fixed bug in enabling re-synch buttton after completion
  - Fixed bug in synchronising old posts without images

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -89,7 +89,7 @@
         }
         window.doSync = function (){
             var $=jQuery('BUTTON.resync');
-            this.disabled=true;
+            button.prop('disabled',true);
             if ('Re-Synch'===$.html()){
                 $.html('connecting');
             }
@@ -112,7 +112,7 @@
                         window.doSync();
                     } else {
                         var button = jQuery('BUTTON.resync');
-                        this.disabled=false;
+                        button.prop('disabled',false);
                         button.html('Re-Synch');
                         button.removeClass('required auto');
                         jQuery('#sync-message').addClass('hidden');
