--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -523,3 +523,6 @@ BUTTON.resync:disabled {
     background: rgba(0,0,0,1); /* url(../img/loading.svg) center no-repeat; */
     color: rgba(255,255,255,1);
 }
+.sync-message {
+    margin-bottom: 10px;
+}
